--- a/public/redrock.html
+++ b/public/redrock.html
@@ -6,135 +6,135 @@
 <link rel="stylesheet" type="text/css" href="css/redrock.css">
 </head>
 <body>
-    <div class="top">
-        <img src="img/01.gif" class="img1">
-    </div>
-    <div class="title">
-        <img src="img/02.gif" class="img1">
-    </div>
-    <div class="center">
-        <div class="center_main">
-            <div class="main_1">
-                <div class="top1">
-                    <div class="t1_l">
-                        <div class="t1_ll">
-                            姓
-                        </div>
-                        <div class="t1_lr">
-                            名:
-                        </div>
+<div id="header">
+    <img src="img/01.gif" alt="nav">
+</div>
+<div id="banner">
+    <img src="img/02.gif" alt="banner">
+</div>
+<div id="container">
+    <div id="main">
+        <div id="name">
+            <div class="content">
+                <div class="content_left">
+                    <div class="content_left_l">
+                        姓
                     </div>
-                    <div class="t1_r">
-                        杨均有
+                    <div class="content_left_r">
+                        名:
                     </div>
                 </div>
-                <div class="bottom1">
-                    <img src="img/line.jpg" class="img2">
+                <div class="content_right">
+                    杨均有
                 </div>
             </div>
-            <div class="main_2">
-                <div class="top1">
-                    <div class="t2_l">
-                        准考证号：
-                    </div>
-                    <div class="t1_r">
-                        123846794161
-                    </div>
-                </div>
-                <div class="bottom1">
-                    <img src="img/line.jpg" class="img2">
-                </div>                
+            <div class="line">
+                <img src="img/line.jpg" class="pic_line" alt="line"s>
             </div>
-            <div class="main_3">
-                <div class="top1">
-                    <div class="t1_l">
-                        <div class="t3_ll">
-                            总
-                        </div>
-                        <div class="t3_lr">
-                            分:
-                        </div>
-                    </div>
-                    <div class="t1_r">
-                        475
-                    </div>                    
+        </div>
+        <div id="examnumber">
+            <div class="content">
+                <div class="examnumber_left">
+                    准考证号：
                 </div>
-                <div class="bottom1">
-                    <img src="img/line.jpg" class="img2">
-                </div>                                
+                <div class="content_right">
+                    123846794161
+                </div>
             </div>
-            <div class="main_4">
-                <div class="top1">
-                    <div class="t1_l">
-                        <div class="t3_ll">
-                            单
-                        </div>
-                        <div class="t3_lr">
-                            科:
-                        </div>
+            <div class="line">
+                <img src="img/line.jpg" class="pic_line" alt="line">
+            </div>                
+        </div>
+        <div id="score">
+            <div class="content">
+                <div class="content_left">
+                    <div class="score_left_l">
+                        总
                     </div>
-                    <div class="t3_r">
-                        <div class="t3_rl">
-                            听力
-                        </div>
-                        <div class="t3_rr">
-                            134
-                        </div>
-                    </div>                    
+                    <div class="score_left_r">
+                        分:
+                    </div>
                 </div>
-                <div class="bottom1">
-                    <img src="img/line.jpg" class="img2">
-                </div>                                
-            </div>            
-            <div class="main_5">
-                <div class="top1">
-                    <div class="t1_l"></div>
-                    <div class="t3_r">
-                        <div class="t3_rl">
-                            阅读
-                        </div>
-                        <div class="t3_rr">
-                            134
-                        </div>
-                    </div>             
-                </div>
-                <div class="bottom1">
-                    <img src="img/line.jpg" class="img2">
-                </div>                                
+                <div class="content_right">
+                    475
+                </div>                    
             </div>
-            <div class="main_6">
-                <div class="top1">
-                    <div class="t1_l"></div>
-                    <div class="t3_r">
-                        <div class="t6_rl">
-                            写作和翻译
-                        </div>
-                        <div class="t6_rr">
-                            134
-                        </div>
+            <div class="line">
+                <img src="img/line.jpg" class="pic_line" alt="line">
+            </div>                                
+        </div>
+        <div id="subject">
+            <div class="content">
+                <div class="content_left">
+                    <div class="score_left_l">
+                        单
+                    </div>
+                    <div class="score_left_r">
+                        科:
+                    </div>
+                </div>
+                <div class="score_right">
+                    <div class="score_right_l">
+                        听力
+                    </div>
+                    <div class="score_right_r">
+                        134
+                    </div>
+                </div>                    
+            </div>
+            <div class="line">
+                <img src="img/line.jpg" class="pic_line" alt="line">
+            </div>                                
+        </div>            
+        <div id="reading">
+            <div class="content">
+                <div class="content_left"></div>
+                <div class="score_right">
+                    <div class="score_right_l">
+                        阅读
+                    </div>
+                    <div class="score_right_r">
+                        134
+                    </div>
+                </div>             
+            </div>
+            <div class="line">
+                <img src="img/line.jpg" class="pic_line" alt="line">
+            </div>                                
+        </div>
+        <div id="writing">
+            <div class="content">
+                <div class="content_left"></div>
+                <div class="score_right">
+                    <div id="writing_right_l">
+                        写作和翻译
+                    </div>
+                    <div id="writing_right_r">
+                        134
+                    </div>
                         
-                    </div>             
+                </div>             
                    
-                </div>
-                <div class="bottom1">
-                    <img src="img/line.jpg" class="img2">
-                </div>                                
             </div>
-            <div class="main_7">
-                <div class="top2"></div>
-                <div class="bottom2">
-                    <img src="img/墨水.jpg" class="imgmo">
-                    <img src="img/line.jpg" class="img3">
-                    <img src="img/笔.jpg">
-                </div>                               
-            </div>
+            <div class="line">
+                <img src="img/line.jpg" class="pic_line" alt="line">
+            </div>                                
+        </div>
+        <div id="pic">
+            <div id="pic_content"></div>
+            <div id="pic_line">
+                <img src="img/墨水.jpg" class="ink" alt="ink">
+                <img src="img/line.jpg" class="pic_line2" alt="line">
+                <img src="img/笔.jpg">
+            </div>                               
         </div>
     </div>
-    <div class="bottom">
-        <div class="b_main">
-                ©红岩网校工作室
-        </div>
+</div>
+<div id="footer">
+    <div id="footer_content">
+            &copy;红岩网校工作室
     </div>
+</div>
 
 
 
